@@ -28,9 +28,14 @@ import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.regex.Pattern;
 import javax.lang.model.SourceVersion;
+
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.OutputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.stream.Stream;
+
 import javax.lang.model.element.Element;
 import javax.lang.model.element.ElementKind;
 import javax.lang.model.element.ExecutableElement;
@@ -46,6 +51,7 @@ import org.netbeans.api.java.source.ClasspathInfo;
 import org.netbeans.api.java.source.CompilationController;
 import org.netbeans.api.java.source.ElementHandle;
 import org.netbeans.api.java.source.JavaSource;
+import org.netbeans.api.java.source.SourceUtilsTest;
 import org.netbeans.api.java.source.SourceUtilsTestUtil;
 import org.netbeans.api.java.source.SourceUtilsTestUtil2;
 import org.netbeans.api.java.source.Task;
@@ -66,6 +72,7 @@ import org.openide.filesystems.Repository;
 import org.openide.loaders.DataObject;
 import org.openide.util.Exceptions;
 import org.openide.util.lookup.ServiceProvider;
+import static java.nio.file.StandardCopyOption.*;
 
 /**
  *
@@ -276,31 +283,6 @@ public class GoToSupportTest extends NbTestCase {
                 fail("Should not be called.");
             }
         }, true);
-    }
-
-    public void testTooltipForInnerClasses() throws Exception {
-        String code = "package test; public class Test {enum EE {A} class CC {} EE a; CC c;}";
-        int[] offset = new int[] {82, 88};
-        String[] golden = new String[] {
-            "<html><body><base href=\"file:" + getWorkDirPath() + "/src/test/Test.java\"></base><font size='+0'><b><a href='*0'>test.&#x200B;Test</a></b></font><pre>static enum <b>EE</b><br>extends <a href='*1'>Enum</a>&lt;<a href='*2'>EE</a>&gt;</pre>",
-            "<html><body><base href=\"file:" + getWorkDirPath() + "/src/test/Test.java\"></base><font size='+0'><b><a href='*0'>test.&#x200B;Test</a></b></font><pre>class <b>CC</b><br>extends <a href='*1'>Object</a></pre>",
-        };
-        assertEquals(offset.length, golden.length);
-        for (int cntr = 0; cntr < offset.length; cntr++) {
-            String tooltip = performTest(code, offset[cntr] - 24, new OrigUiUtilsCaller() {
-                public void open(FileObject fo, int pos) {
-                    fail("Should not be called.");
-                }
-                public void beep() {
-                    fail("Should not be called.");
-                }
-                public void open(ClasspathInfo info, Element el) {
-                    fail("Should not be called.");
-                }
-            }, true);
-
-            assertEquals(golden[cntr], tooltip);
-        }
     }
 
     public void testGoToIntoAnnonymous() throws Exception {
@@ -1266,8 +1248,7 @@ public class GoToSupportTest extends NbTestCase {
         return null;
     }
     
-    protected void performTest(String source, int caretPos, String textToInsert, String goldenFileName, String sourceLevel) throws Exception {
-        
+    protected void performTest(String source, int caretPos, String textToInsert, String goldenFileName, String sourceLevel, boolean external) throws Exception {
         clearWorkDir();
         FileUtil.refreshFor(getWorkDir());
 
@@ -1281,6 +1262,12 @@ public class GoToSupportTest extends NbTestCase {
         copyToWorkDir(new File(getDataDir(), "org/netbeans/modules/java/editor/javadocsnippet/data/" + source + ".java"), testSource);
         FileObject testSourceFO = FileUtil.toFileObject(testSource);
         
+        if(external) {
+            FileUtil.createFolder(sourceDir, "test");
+            copyFolder((new File(getDataDir(),"org/netbeans/modules/java/editor/javadocsnippet/data/snippet-files").toPath()),
+                    new File(getWorkDir(), "src/test/snippet-files").toPath());
+        }
+
         SourceUtilsTestUtil.setSourceLevel(testSourceFO, sourceLevel);
         SourceUtilsTestUtil.prepareTest(sourceDir, buildDir, cacheDir, new FileObject[0]);
         assertNotNull(testSourceFO);
@@ -1303,6 +1290,7 @@ public class GoToSupportTest extends NbTestCase {
         Writer out = new FileWriter(output);            
         out.write(docText);
         out.close();
+
         
         File goldenFile = getGoldenFile(goldenFileName);
         File diffFile = new File(getWorkDir(), getName() + ".diff");
@@ -1310,6 +1298,20 @@ public class GoToSupportTest extends NbTestCase {
         assertFile(output, goldenFile, diffFile, new WhitespaceIgnoringDiff());
         
         LifecycleManager.getDefault().saveAll();
+    }
+
+    public  void copyFolder(Path src, Path dest) throws IOException {
+        try (Stream<Path> stream = Files.walk(src)) {
+            stream.forEach(source -> copy(source, dest.resolve(src.relativize(source))));
+        }
+    }
+
+    private void copy(Path source, Path dest) {
+        try {
+            Files.copy(source, dest, REPLACE_EXISTING);
+        } catch (Exception e) {
+            throw new RuntimeException(e.getMessage(), e);
+        }
     }
 
     protected void copyToWorkDir(File resource, File toFile) throws IOException {
@@ -1581,13 +1583,6 @@ public class GoToSupportTest extends NbTestCase {
     }
 
     public void testJavadocSnippetHighlightRecord() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
-
         if (!hasRecords()) {
             return;
         }
@@ -1595,553 +1590,408 @@ public class GoToSupportTest extends NbTestCase {
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
         
-        performTest("HighlightTag", 388, null, "javadocsnippet_highlightRecord.pass", this.sourceLevel);
+        performTest("HighlightTag", 388, null, "javadocsnippet_highlightRecord.pass", this.sourceLevel, false);
     }
     
     public void testHighlightUsingSubstring() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
-
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");      
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
         
-        performTest("HighlightTag", 858, null, "javadocsnippet_highlightUsingSubstring.pass", this.sourceLevel);
+        performTest("HighlightTag", 1667, null, "javadocsnippet_highlightUsingSubstring.pass", this.sourceLevel, false);
     }
     
     public void testHesthighlightUsingRegex() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
-
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
         
-        performTest("HighlightTag",1280, null, "javadocsnippet_highlightUsingRegex.pass", this.sourceLevel);
+        performTest("HighlightTag",2092, null, "javadocsnippet_highlightUsingRegex.pass", this.sourceLevel, false);
     }
  
     public void testHighlightUsingSubstringAndRegex() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
-
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
 
-        performTest("HighlightTag", 1788, null, "javadocsnippet_highlightUsingSubstringAndRegex.pass", this.sourceLevel);
+        performTest("HighlightTag", 2604, null, "javadocsnippet_highlightUsingSubstringAndRegex.pass", this.sourceLevel, false);
     }
     
     public void testHighlightUsingSubstringRegexAndType() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
 
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
 
-        performTest("HighlightTag", 3734, null, "javadocsnippet_highlightUsingSubstringRegexAndType.pass", this.sourceLevel);
+        performTest("HighlightTag", 4551, null, "javadocsnippet_highlightUsingSubstringRegexAndType.pass", this.sourceLevel, false);
     }
         
     public void testHighlightUsingMultipleSnippetTagInOneJavaDocWithRegion() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
 
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
 
-        performTest("HighlightTag", 3734, null, "javadocsnippet_highlightUsingMultipleSnippetTagInOneJavaDocWithRegion.pass", this.sourceLevel);
+        performTest("HighlightTag", 5333, null, "javadocsnippet_highlightUsingMultipleSnippetTagInOneJavaDocWithRegion.pass", this.sourceLevel, false);
     }
         
     public void testHighlightUsingNestedRegions() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
 
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
 
-        performTest("HighlightTag", 5335, null, "javadocsnippet_highlightUsingNestedRegions.pass", this.sourceLevel);
+        performTest("HighlightTag", 6148, null, "javadocsnippet_highlightUsingNestedRegions.pass", this.sourceLevel, false);
     }
     
     public void testHighlightUsingRegionsEndedWithDoubleColon() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
 
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
 
-        performTest("HighlightTag", 6028, null, "javadocsnippet_highlightUsingRegionsEndedWithDoubleColon.pass", this.sourceLevel);
+        performTest("HighlightTag", 6840, null, "javadocsnippet_highlightUsingRegionsEndedWithDoubleColon.pass", this.sourceLevel, false);
     }
     
     public void testNoMarkupTagPresent() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
 
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
 
-        performTest("HighlightTag", 6271, null, "javadocsnippet_noMarkupTagPresent.pass", this.sourceLevel);
+        performTest("HighlightTag", 7083, null, "javadocsnippet_noMarkupTagPresent.pass", this.sourceLevel, false);
     }
  
     public void testHighlightTagSubstringApplyToNextLine() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
 
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
 
-        performTest("HighlightTag", 6521, null, "javadocsnippet_highlightTagSubstringApplyToNextLine.pass", this.sourceLevel);
+        performTest("HighlightTag", 7333, null, "javadocsnippet_highlightTagSubstringApplyToNextLine.pass", this.sourceLevel, false);
     }
  
     public void testHighlightTagRegexWithAllCharacterChange() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
 
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
 
-        performTest("HighlightTag", 6783, null, "javadocsnippet_highlightTagRegexWithAllCharacterChange.pass", this.sourceLevel);
+        performTest("HighlightTag", 7598, null, "javadocsnippet_highlightTagRegexWithAllCharacterChange.pass", this.sourceLevel, false);
     }
        
     public void testHighlightTagRegexWithAllCharacterChangeUsingDot() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
 
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
 
-        performTest("HighlightTag", 7047, null, "javadocsnippet_highlightTagRegexWithAllCharacterChangeUsingDot.pass", this.sourceLevel);
+        performTest("HighlightTag", 7860, null, "javadocsnippet_highlightTagRegexWithAllCharacterChangeUsingDot.pass", this.sourceLevel, false);
     }
     
     public void testSingleLine_Replace_Regex() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("ReplaceTag", 1127, null, "javadocsnippet_SingleLine_Replace_Regex.pass", this.sourceLevel);
+        performTest("ReplaceTag", 1127, null, "javadocsnippet_SingleLine_Replace_Regex.pass", this.sourceLevel, false);
     }
 
     public void testSingleLine_Replace_RegexDotStar() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("ReplaceTag", 1417, null, "javadocsnippet_SingleLine_Replace_RegexDotStar.pass", this.sourceLevel);
+        performTest("ReplaceTag", 1417, null, "javadocsnippet_SingleLine_Replace_RegexDotStar.pass", this.sourceLevel, false);
     }
 
     public void testSingleLine_Replace_RegexDot() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("ReplaceTag", 1713, null, "javadocsnippet_SingleLine_Replace_RegexDot.pass", this.sourceLevel);
+        performTest("ReplaceTag", 1713, null, "javadocsnippet_SingleLine_Replace_RegexDot.pass", this.sourceLevel, false);
     }
 
     public void testSingleLine_Replace_Substring() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("ReplaceTag", 2021, null, "javadocsnippet_SingleLine_Replace_Substring.pass", this.sourceLevel);
+        performTest("ReplaceTag", 2021, null, "javadocsnippet_SingleLine_Replace_Substring.pass", this.sourceLevel, false);
     }
 
     public void testSingleLine_MultipleReplaceAnnotation_Regex() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("ReplaceTag", 2383, null, "javadocsnippet_SingleLine_MultipleReplaceAnnotation_Regex.pass", this.sourceLevel);
+        performTest("ReplaceTag", 2383, null, "javadocsnippet_SingleLine_MultipleReplaceAnnotation_Regex.pass", this.sourceLevel, false);
     }
 
     public void testSingleLine_MultipleReplaceAnnotation_Substring() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("ReplaceTag", 2878, null, "javadocsnippet_SingleLine_MultipleReplaceAnnotation_Substring.pass", this.sourceLevel);
+        performTest("ReplaceTag", 2878, null, "javadocsnippet_SingleLine_MultipleReplaceAnnotation_Substring.pass", this.sourceLevel, false);
     }
 
     public void testSingleLine_ReplaceAnnotation_Regex_DoubleQuote() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("ReplaceTag", 3221, null, "javadocsnippet_SingleLine_ReplaceAnnotation_Regex_DoubleQuote.pass", this.sourceLevel);
+        performTest("ReplaceTag", 3221, null, "javadocsnippet_SingleLine_ReplaceAnnotation_Regex_DoubleQuote.pass", this.sourceLevel, false);
     }
 
     public void testRegion_ReplaceAnnotation_Regex() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("ReplaceTag", 3732, null, "javadocsnippet_Region_ReplaceAnnotation_Regex.pass", this.sourceLevel);
+        performTest("ReplaceTag", 3732, null, "javadocsnippet_Region_ReplaceAnnotation_Regex.pass", this.sourceLevel, false);
     }
 
     public void testRegion_ReplaceAnnotation_RegexInnComment() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("ReplaceTag", 4135, null, "javadocsnippet_Region_ReplaceAnnotation_RegexInnComment.pass", this.sourceLevel);
+        performTest("ReplaceTag", 4135, null, "javadocsnippet_Region_ReplaceAnnotation_RegexInnComment.pass", this.sourceLevel, false);
     }
 
     public void testNestedRegion_ReplaceAnnotation_Substring() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("ReplaceTag", 4712, null, "javadocsnippet_NestedRegion_ReplaceAnnotation_Substring.pass", this.sourceLevel);
+        performTest("ReplaceTag", 4712, null, "javadocsnippet_NestedRegion_ReplaceAnnotation_Substring.pass", this.sourceLevel, false);
     }
 
     public void testNestedRegion_ReplaceAnnotation_Regex() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("ReplaceTag", 5270, null, "javadocsnippet_NestedRegion_ReplaceAnnotation_Regex.pass", this.sourceLevel);
+        performTest("ReplaceTag", 5270, null, "javadocsnippet_NestedRegion_ReplaceAnnotation_Regex.pass", this.sourceLevel, false);
     }
 
     public void testNestedRegion_Highlight_And_replace() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("ReplaceTag", 6597, null, "javadocsnippet_NestedRegion_Highlight_And_replace.pass", this.sourceLevel);
+        performTest("ReplaceTag", 6597, null, "javadocsnippet_NestedRegion_Highlight_And_replace.pass", this.sourceLevel, false);
     }
 
     public void testHighlightAndReplace_cornercase() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("ReplaceTag", 6926, null, "javadocsnippet_HighlightAndReplace_cornercase.pass", this.sourceLevel);
+        performTest("ReplaceTag", 6926, null, "javadocsnippet_HighlightAndReplace_cornercase.pass", this.sourceLevel, false);
     }
 
     public void testLinkTag() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("LinkTag", 558, null, "javadocsnippet_LinkTag.pass", this.sourceLevel);
+        performTest("LinkTag", 1368, null, "javadocsnippet_LinkTag.pass", this.sourceLevel, false);
 
     }
 
     public void testLinkTag_With_RegexAndRegion() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("LinkTag", 999, null, "javadocsnippet_LinkTag_With_RegexAndRegion.pass", this.sourceLevel);
+        performTest("LinkTag", 1809, null, "javadocsnippet_LinkTag_With_RegexAndRegion.pass", this.sourceLevel, false);
 
     }
 
     public void testLinkTag_AppliesToNextLine() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("LinkTag", 1350, null, "javadocsnippet_LinkTag_AppliesToNextLine.pass", this.sourceLevel);
+        performTest("LinkTag", 2160, null, "javadocsnippet_LinkTag_AppliesToNextLine.pass", this.sourceLevel, false);
 
     }
 
     public void testLink_MultipleTag_OnSameLine() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("LinkTag", 1737, null, "javadocsnippet_Link_MultipleTag_OnSameLine.pass", this.sourceLevel);
+        performTest("LinkTag", 2547, null, "javadocsnippet_Link_MultipleTag_OnSameLine.pass", this.sourceLevel, false);
     }
 
     public void testLinkTag_With_RegionAttribute() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("LinkTag", 2420, null, "javadocsnippet_LinkTag_With_RegionAttribute.pass", this.sourceLevel);
+        performTest("LinkTag", 3230, null, "javadocsnippet_LinkTag_With_RegionAttribute.pass", this.sourceLevel, false);
     }
 
     public void testLinkTag_Ref_ToThisClass_UsingHash() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("LinkTag", 2752, null, "javadocsnippet_LinkTag_Ref_ToThisClass_UsingHash.pass", this.sourceLevel);
+        performTest("LinkTag", 3562, null, "javadocsnippet_LinkTag_Ref_ToThisClass_UsingHash.pass", this.sourceLevel, false);
     }
 
     public void testLinkTag_FieldRef_ToThisClass_UsingHash() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("LinkTag", 3074, null, "javadocsnippet_LinkTag_FieldRef_ToThisClass_UsingHash.pass", this.sourceLevel);
+        performTest("LinkTag", 3884, null, "javadocsnippet_LinkTag_FieldRef_ToThisClass_UsingHash.pass", this.sourceLevel, false);
     }
 
     public void testLinkTag_AlongWith_HighlightTag() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("LinkTag", 3492, null, "javadocsnippet_LinkTag_AlongWith_HighlightTag.pass", this.sourceLevel);
+        performTest("LinkTag", 4302, null, "javadocsnippet_LinkTag_AlongWith_HighlightTag.pass", this.sourceLevel, false);
     }
 
     public void testLinkTag_AlongWith_ReplaceTag() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("LinkTag", 3895, null, "javadocsnippet_LinkTag_AlongWith_ReplaceTag.pass", this.sourceLevel);
+        performTest("LinkTag", 4705, null, "javadocsnippet_LinkTag_AlongWith_ReplaceTag.pass", this.sourceLevel, false);
     }
 
     public void testLinkTag_AlongWith_SubStringAndReplaceTag() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("LinkTag", 4353, null, "javadocsnippet_LinkTag_AlongWith_SubStringAndReplaceTag.pass", this.sourceLevel);
+        performTest("LinkTag", 5163, null, "javadocsnippet_LinkTag_AlongWith_SubStringAndReplaceTag.pass", this.sourceLevel, false);
     }
 
     public void testLinkTag_EmptyReplacementValue() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("LinkTag", 4758, null, "javadocsnippet_LinkTag_EmptyReplacementValue.pass", this.sourceLevel);
+        performTest("LinkTag", 5568, null, "javadocsnippet_LinkTag_EmptyReplacementValue.pass", this.sourceLevel, false);
     }
+
     public void testError_HighlightTag() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("Errors", 1331, null, "javadocsnippet_TestError_HighlightTag.pass", this.sourceLevel);
+        performTest("Errors", 2140, null, "javadocsnippet_TestError_HighlightTag.pass", this.sourceLevel, false);
     }
     
     public void testError_ReplaceTag() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("Errors", 2613, null, "javadocsnippet_TestError_ReplaceTag.pass", this.sourceLevel);
+        performTest("Errors", 3422, null, "javadocsnippet_TestError_ReplaceTag.pass", this.sourceLevel, false);
     }
     
     public void testError_LinkTag() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("Errors", 4069, null, "javadocsnippet_TestError_LinkTag.pass", this.sourceLevel);
+        performTest("Errors", 4877, null, "javadocsnippet_TestError_LinkTag.pass", this.sourceLevel, false);
     }
     
     public void testError_UnpairedRegion() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
-            return;
-        }
+        
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("Errors", 4740, null, "javadocsnippet_TestError_UnpairedRegion.pass", this.sourceLevel);
+        performTest("Errors", 5548, null, "javadocsnippet_TestError_UnpairedRegion.pass", this.sourceLevel, false);
     }
     
     public void testError_NoRegionToEnd() throws Exception {
-        try {
-            SourceVersion.valueOf("RELEASE_18"); //NOI18N
-        } catch (IllegalArgumentException ex) {
-            //OK, no RELEASE_18, skip tests
+        
+        this.sourceLevel = getLatestSourceVersion();
+        EXTRA_OPTIONS.add("--enable-preview");
+        JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
+        performTest("Errors", 5715, null, "javadocsnippet_TestError_NoRegionToEnd.pass", this.sourceLevel, false);
+    }
+
+    public void testErrorFileEmpty() throws Exception {
+
+        if (!hasRecords()) {
             return;
         }
         this.sourceLevel = getLatestSourceVersion();
         EXTRA_OPTIONS.add("--enable-preview");
         JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
-        performTest("Errors", 4906, null, "javadocsnippet_TestError_NoRegionToEnd.pass", this.sourceLevel);
+
+        performTest("Errors", 5901, null, "javadocsnippet_file_empty.pass", this.sourceLevel, true);
     }
-    
+
+    public void testErrorFileInvalid() throws Exception {
+        if (!hasRecords()) {
+            return;
+        }
+        this.sourceLevel = getLatestSourceVersion();
+        EXTRA_OPTIONS.add("--enable-preview");
+        JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
+
+        performTest("Errors", 6140, null, "javadocsnippet_file_invalid.pass", this.sourceLevel, true);
+    }
+
+    public void testExternalSnippetFile() throws Exception {
+
+        if (!hasRecords()) {
+            return;
+        }
+        this.sourceLevel = getLatestSourceVersion();
+        EXTRA_OPTIONS.add("--enable-preview");
+        JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
+
+        performTest("Errors", 6440, null, "javadocsnippet_external_file.pass", this.sourceLevel, true);
+    }
+
+    public void testErrorRegionInvalid() throws Exception {
+
+        if (!hasRecords()) {
+            return;
+        }
+        this.sourceLevel = getLatestSourceVersion();
+        EXTRA_OPTIONS.add("--enable-preview");
+        JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
+
+        performTest("Errors", 6608, null, "javadocsnippet_region_invalid.pass", this.sourceLevel, true);
+    }
+
+    public void testExternalRegionValid() throws Exception {
+
+        if (!hasRecords()) {
+            return;
+        }
+        this.sourceLevel = getLatestSourceVersion();
+        EXTRA_OPTIONS.add("--enable-preview");
+        JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
+
+        performTest("Errors", 6888, null, "javadocsnippet_region_valid.pass", this.sourceLevel, true);
+    }
+
     private static final List<String> EXTRA_OPTIONS = new ArrayList<>();
     @ServiceProvider(service = CompilerOptionsQueryImplementation.class, position = 100)
     public static class TestCompilerOptionsQueryImplementation implements CompilerOptionsQueryImplementation {
